--- a/History.txt
+++ b/History.txt
@@ -1,3 +1,8 @@
+=== 1.1.0 2016-02-04
+
+* monorepo  #9
+  * separate CLI package
+
 === 1.0.2 2016-01-31
 
 * removed unnecessary console.log message
