--- a/History.txt
+++ b/History.txt
@@ -1,3 +1,7 @@
+=== 1.1.7 2016-02-06
+
+* check API response and throw Error
+
 === 1.1.6 2016-02-06
 
 * add Hue#request({path:, method:, data:}) method
