--- a/History.txt
+++ b/History.txt
@@ -1,3 +1,8 @@
+=== 1.1.8 2016-04-07
+
+* bugfix in README  #11
+  * thank you for contributing @secesh
+
 === 1.1.7 2016-02-06
 
 * check API response and throw Error
